# local-ai-sku-dimensioner

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CURRENT_STATUS.md  PLAN.md  README.md  THIRD_PARTY_LICENSES.md  alembic.ini  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  calibration_contracts.py  cli.py  config.py  contracts.py  database.py  dependencies.py  errors.py  frontend.py  logging_config.py  main.py  measurement_contracts.py  multipart.py  upload_contracts.py
backend/app/api/: calibration_profiles.py  calibration_test.py  health.py  measurements.py  router.py  scans.py  uploads.py
backend/app/models/: __init__.py  calibration.py  measurement.py  scan.py
backend/app/schemas/: calibration.py  errors.py  health.py  measurements.py  scans.py
backend/app/services/: __init__.py  calibration_application.py  calibration_profiles.py  image_validation.py  measurement_application.py  measurement_results.py  measurement_storage.py  scan_storage.py  scans.py  stored_image_loader.py  uploads.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py
docs/: API.md  DECISIONS.md  GEOMETRY_CAPTURE_GUIDE.md  PHASE_1_CONTRACTS.md  PHASE_1_OWNERSHIP.md  PHASE_2_CONTRACTS.md  PHASE_2_OWNERSHIP.md  PHASE_3_CONTRACTS.md  PHASE_3_OWNERSHIP.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
scripts/: run_dev.ps1  run_prod.ps1  run_tests.ps1  setup_windows.ps1  smoke_test.ps1  validate_dev_shutdown.ps1
(+109 files in other folders)
