[build-system]
requires = ["setuptools>=75,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-sku-dimensioner"
version = "0.1.0"
description = "Local, geometry-first SKU dimensioning application"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "pillow>=11,<13",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pip-tools>=7.4,<8",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/app"]
show_error_codes = true
pretty = true

[tool.coverage.run]
source = ["backend/app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
